fix workflow bug

--- a/.github/workflows/X-x86_64_Y.yml
+++ b/.github/workflows/X-x86_64_Y.yml
@@ -190,7 +190,7 @@ jobs:
       run: |
         cd openwrt
         make -j4 || make -j1 V=s
-        [ "$?" == 0 ] && echo "Compile_Result=true" >> $GITHUB_ENV || echo "Compile_Result=false" >> $GITHUB_ENV
+        [ "$?" == 0 ] && echo "Result=true" >> $GITHUB_ENV || echo "Result=false" >> $GITHUB_ENV
 
     - name: Process Firmware
       if: env.Result == 'true' && !cancelled()
