--- a/.github/workflows/X-x86_64_X.yml
+++ b/.github/workflows/X-x86_64_X.yml
@@ -54,6 +54,8 @@ env:
   DELETE_USELESS_FILES: true
 # 删除早期的 workflow 任务
   DELETE_OLD_WORKFLOW: true
+# Cache 加速编译
+  CACHE_ACCELERATE: true
 ### 结束
 
 jobs:
