--- a/.github/workflows/X-x86_64_Z.yml
+++ b/.github/workflows/X-x86_64_Z.yml
@@ -132,7 +132,7 @@ jobs:
         sudo chown $USER:$GROUPS /workdir
         if [ "${{ env.DELETE_USELESS_FILES }}" == true ]
         then
-            docker rmi $(docker images -q)
+            docker rmi node:12-alpine node:14-alpine node:16-alpine alpine:3.12 alpine:3.13 alpine:3.14 moby/buildkit:latest node:16 node:12 node:14 ubuntu:20.04 buildpack-deps:stretch buildpack-deps:buster buildpack-deps:bullseye debian:9 debian:10 debian:11 ubuntu:18.04 ubuntu:16.04 
             sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php
             sudo -E apt-get -y autoremove --purge
             sudo -E apt-get clean
