--- a/.github/workflows/X-x86_64_X_Mine.yml
+++ b/.github/workflows/X-x86_64_X_Mine.yml
@@ -76,14 +76,14 @@ jobs:
             sudo -E apt-get clean
         fi
 
-    - name: Maximize Build Space
-      uses: easimon/maximize-build-space@master
-      with:
-        root-reserve-mb: 3500
-        swap-size-mb: 100
-        remove-dotnet: 'true'
-        remove-android: 'true'
-        remove-haskell: 'true'
+    # - name: Maximize Build Space
+    #   uses: easimon/maximize-build-space@master
+    #   with:
+    #     root-reserve-mb: 3500
+    #     swap-size-mb: 100
+    #     remove-dotnet: 'true'
+    #     remove-android: 'true'
+    #     remove-haskell: 'true'
 
     - name: Checkout
       uses: actions/checkout@main
