--- a/.github/workflows/X-x86_64_Z_Mine.yml
+++ b/.github/workflows/X-x86_64_Z_Mine.yml
@@ -4,7 +4,7 @@
 #   Author: Xinb                                      #
 ###########################################################
 
-name: x86_64_X_Mine
+name: x86_64_Z_Mine
 
 ### 以下内容请保持不变 (请修改下方的 环境变量设置)
 on:
