--- a/.github/workflows/X-x86_64_Y.yml
+++ b/.github/workflows/X-x86_64_Y.yml
@@ -191,6 +191,7 @@ jobs:
     - name: Build OpenWrt
       run: |
         cd openwrt
+        rm package/feeds/packages/net/adguardhome -rf
         make -j4 || make -j1 V=s
         [ "$?" == 0 ] && echo "Result=true" >> $GITHUB_ENV || echo "Result=false" >> $GITHUB_ENV
 
