--- a/.github/workflows/X-x86_64_X_Mine.yml
+++ b/.github/workflows/X-x86_64_X_Mine.yml
@@ -192,6 +192,7 @@ jobs:
     - name: Build OpenWrt
       run: |
         cd openwrt
+        rm package/feeds/packages/net/adguardhome -rf
         make -j8 || make -j1 V=s
         [ "$?" == 0 ] && echo "Result=true" >> $GITHUB_ENV || echo "Result=false" >> $GITHUB_ENV
 
