Add Auto Package Version Check

--- a/.github/workflows/X-x86_64_X.yml
+++ b/.github/workflows/X-x86_64_X.yml
@@ -216,8 +216,37 @@ jobs:
         rm package/feeds/packages/adguardhome -rf
         rm feeds/packages/net/adguardhome -rf
         ln -s ../../../package/other/AutoBuild-Packages/adguardhome package/feeds/packages/adguardhome
-        make -j4 || make -j1 V=s
+        make -j4 | tee ./build_log.log || make -j1 V=s
         [ "$?" == 0 ] && echo "Result=true" >> $GITHUB_ENV || echo "Result=false" >> $GITHUB_ENV
+
+
+
+    - name: Check Build Update
+      run: |
+        export NOW_DATA_VERSION=${{env.NOW_DATA_VERSION}}
+        export GITHUB_WORKSPACE=$GITHUB_WORKSPACE
+        bash $GITHUB_WORKSPACE/Scripts/AutoBuild_Upcheck.sh ${{env.Tempoary_FLAG}}
+  
+    - name: Upload Package Version to Github Release
+      uses: svenstaro/upload-release-action@v2
+      if: env.Release=='true' && env.UPLOAD_RELEASES == 'true' && env.Result == 'true' && !cancelled()
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: ${{env.Tempoary_FLAG}}_build_pkg_ver.log
+        file_glob: true
+        tag: v${{ steps.date.outputs.date }}
+        overwrite: true
+  
+    - name: Upload Package Update to Github Release
+      uses: svenstaro/upload-release-action@v2
+      if: env.Release=='true' && env.UPLOAD_RELEASES == 'true' && env.Result == 'true' && !cancelled()
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: ${{env.Tempoary_FLAG}}_build_pkg_up.log 
+        file_glob: true
+        tag: v${{ steps.date.outputs.date }}
+        overwrite: true
+
 
     - name: Process Firmware
       if: env.Result == 'true' && !cancelled()
