--- a/.github/workflows/X-x86_64_X.yml
+++ b/.github/workflows/X-x86_64_X.yml
@@ -312,7 +312,7 @@ jobs:
       uses: su-dont/share-point-uploader@v2.1
       if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
       with:
-        sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
         sp_username: ${{ secrets.USERNAME }}
         sp_password: ${{ secrets.PASSWORD }}
         sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -323,7 +323,7 @@ jobs:
       uses: su-dont/share-point-uploader@v2.1
       if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
       with:
-        sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
         sp_username: ${{ secrets.USERNAME }}
         sp_password: ${{ secrets.PASSWORD }}
         sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -334,7 +334,7 @@ jobs:
     #   uses: su-dont/share-point-uploader@v2.1
     #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
     #   with:
-    #     sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
     #     sp_username: ${{ secrets.USERNAME }}
     #     sp_password: ${{ secrets.PASSWORD }}
     #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -345,7 +345,7 @@ jobs:
     #   uses: su-dont/share-point-uploader@v2.1
     #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
     #   with:
-    #     sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
     #     sp_username: ${{ secrets.USERNAME }}
     #     sp_password: ${{ secrets.PASSWORD }}
     #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -356,7 +356,7 @@ jobs:
       uses: su-dont/share-point-uploader@v2.1
       if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
       with:
-        sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
         sp_username: ${{ secrets.USERNAME }}
         sp_password: ${{ secrets.PASSWORD }}
         sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -367,7 +367,7 @@ jobs:
       uses: su-dont/share-point-uploader@v2.1
       if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
       with:
-        sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
         sp_username: ${{ secrets.USERNAME }}
         sp_password: ${{ secrets.PASSWORD }}
         sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -378,7 +378,7 @@ jobs:
     #   uses: su-dont/share-point-uploader@v2.1
     #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
     #   with:
-    #     sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
     #     sp_username: ${{ secrets.USERNAME }}
     #     sp_password: ${{ secrets.PASSWORD }}
     #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -389,7 +389,7 @@ jobs:
     #   uses: su-dont/share-point-uploader@v2.1
     #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
     #   with:
-    #     sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
     #     sp_username: ${{ secrets.USERNAME }}
     #     sp_password: ${{ secrets.PASSWORD }}
     #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
