--- a/.github/workflows/X-x86_64_Z.yml
+++ b/.github/workflows/X-x86_64_Z.yml
@@ -303,7 +303,7 @@ jobs:
       uses: su-dont/share-point-uploader@v2.1
       if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
       with:
-        sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
         sp_username: ${{ secrets.USERNAME }}
         sp_password: ${{ secrets.PASSWORD }}
         sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -314,7 +314,7 @@ jobs:
       uses: su-dont/share-point-uploader@v2.1
       if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
       with:
-        sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
         sp_username: ${{ secrets.USERNAME }}
         sp_password: ${{ secrets.PASSWORD }}
         sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -325,7 +325,7 @@ jobs:
     #   uses: su-dont/share-point-uploader@v2.1
     #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
     #   with:
-    #     sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
     #     sp_username: ${{ secrets.USERNAME }}
     #     sp_password: ${{ secrets.PASSWORD }}
     #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -336,7 +336,7 @@ jobs:
     #   uses: su-dont/share-point-uploader@v2.1
     #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
     #   with:
-    #     sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
     #     sp_username: ${{ secrets.USERNAME }}
     #     sp_password: ${{ secrets.PASSWORD }}
     #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -347,7 +347,7 @@ jobs:
       uses: su-dont/share-point-uploader@v2.1
       if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
       with:
-        sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
         sp_username: ${{ secrets.USERNAME }}
         sp_password: ${{ secrets.PASSWORD }}
         sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -358,7 +358,7 @@ jobs:
       uses: su-dont/share-point-uploader@v2.1
       if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
       with:
-        sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
         sp_username: ${{ secrets.USERNAME }}
         sp_password: ${{ secrets.PASSWORD }}
         sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -369,7 +369,7 @@ jobs:
     #   uses: su-dont/share-point-uploader@v2.1
     #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
     #   with:
-    #     sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
     #     sp_username: ${{ secrets.USERNAME }}
     #     sp_password: ${{ secrets.PASSWORD }}
     #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
@@ -380,7 +380,7 @@ jobs:
     #   uses: su-dont/share-point-uploader@v2.1
     #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
     #   with:
-    #     sp_url: https://xinbao.sharepoint.com/:f:/r/sites/OpenWrt
+    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
     #     sp_username: ${{ secrets.USERNAME }}
     #     sp_password: ${{ secrets.PASSWORD }}
     #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
